[gd_scene load_steps=3 format=3 uid="uid://csxurulhrv6tu"]

[ext_resource type="Texture2D" uid="uid://g2j1y2hyvk3r" path="res://assets/space_wallpaper.jpg" id="1_ff21h"]
[ext_resource type="Script" path="res://scripts/menu_script.gd" id="2_2a58o"]

[node name="MainMenu" type="Node"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("2_2a58o")

[node name="Main" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Main/CenterContainer"]
custom_minimum_size = Vector2(512, 256)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Main/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 18
theme_override_constants/margin_top = 18
theme_override_constants/margin_right = 18
theme_override_constants/margin_bottom = 18

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Spacer Miner"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="ButtonPlay" type="Button" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Play"

[node name="ButtonSetting" type="Button" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Settings"

[node name="ButtonBlackjack" type="Button" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Black Jack"

[node name="ButtonQuit" type="Button" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit"

[node name="Blackjack" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Blackjack"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -128.0
offset_right = 256.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Blackjack/CenterContainer"]
custom_minimum_size = Vector2(512, 256)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Blackjack/CenterContainer/PanelContainer"]
layout_mode = 2
color = Color(0.8, 0.160784, 0.219608, 0.858824)

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Blackjack/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 18
theme_override_constants/margin_top = 18
theme_override_constants/margin_right = 18
theme_override_constants/margin_bottom = 18

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Blackjack/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="CanvasLayer/Blackjack/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Black Jack"

[node name="bank_label" type="Label" parent="CanvasLayer/Blackjack/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "your bank"

[node name="Button_hit" type="Button" parent="CanvasLayer/Blackjack/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "hit"

[node name="Button_stop" type="Button" parent="CanvasLayer/Blackjack/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "stop
"

[node name="bet_label" type="Label" parent="CanvasLayer/Blackjack/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "your bet "

[node name="bet_slider" type="HSlider" parent="CanvasLayer/Blackjack/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 10.0

[node name="Player_cards_label" type="Label" parent="CanvasLayer/Blackjack/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "player cards:"

[node name="dealer_cards_Label" type="Label" parent="CanvasLayer/Blackjack/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Dealer cards:"

[node name="game_message_label" type="Label" parent="CanvasLayer/Blackjack/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "press hit to start
"

[node name="SettingsBack" type="Button" parent="CanvasLayer/Blackjack/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="Settings" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Settings/CenterContainer"]
custom_minimum_size = Vector2(512, 256)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Settings/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 18
theme_override_constants/margin_top = 18
theme_override_constants/margin_right = 18
theme_override_constants/margin_bottom = 18

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "settings
"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="DeleteSave" type="Button" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "DELETE SAVE"

[node name="data_test" type="Button" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "data test"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Map Size Slider
Effects preformace"
horizontal_alignment = 1

[node name="MapSizeLabel" type="Label" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Map Size: 1"
horizontal_alignment = 1

[node name="Mapsize" type="HSlider" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 3.0
value = 1.0
tick_count = 3

[node name="SettingsBack" type="Button" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="BackGround" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ff21h")

[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonPlay" to="CanvasLayer" method="_on_button_play_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonSetting" to="CanvasLayer" method="_on_button_setting_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonBlackjack" to="CanvasLayer" method="_on_button_blackjack_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonQuit" to="CanvasLayer" method="_on_button_quit_pressed"]
[connection signal="pressed" from="CanvasLayer/Blackjack/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Button_hit" to="CanvasLayer" method="_on_button_hit_pressed"]
[connection signal="pressed" from="CanvasLayer/Blackjack/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Button_stop" to="CanvasLayer" method="_on_button_stop_pressed"]
[connection signal="drag_ended" from="CanvasLayer/Blackjack/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/bet_slider" to="CanvasLayer" method="_on_bet_slider_drag_ended"]
[connection signal="value_changed" from="CanvasLayer/Blackjack/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/bet_slider" to="CanvasLayer" method="_on_bet_slider_value_changed"]
[connection signal="pressed" from="CanvasLayer/Blackjack/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsBack" to="CanvasLayer" method="_on_settings_back_pressed"]
[connection signal="pressed" from="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/DeleteSave" to="CanvasLayer" method="_on_delete_save_pressed"]
[connection signal="pressed" from="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/data_test" to="CanvasLayer" method="_on_data_test_pressed"]
[connection signal="value_changed" from="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/Mapsize" to="CanvasLayer" method="_on_mapsize_value_changed"]
[connection signal="pressed" from="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsBack" to="CanvasLayer" method="_on_settings_back_pressed"]
